--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ matrix:
       env: "DJANGO_VERSION=2.0"
 
 install:
+  - "pip install mock"
   - "pip install django==$DJANGO_VERSION"
   - "python setup.py develop"
   - "pip install pytest-django"
