--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+dist: xenial
+sudo: true
 language: python
 
 matrix:
@@ -11,6 +13,10 @@ matrix:
     - python: "3.6"
       env: "DJANGO_VERSION=1.11"
     - python: "3.6"
+      env: "DJANGO_VERSION=2.0"
+    - python: "3.7"
+      env: "DJANGO_VERSION=1.11"
+    - python: "3.7"
       env: "DJANGO_VERSION=2.0"
 
 install:
