--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,10 @@ matrix:
     - python: "3.6"
       env: "DJANGO_VERSION=2.0"
     - python: "3.7"
-      env: "DJANGO_VERSION=1.11"
-    - python: "3.7"
       env: "DJANGO_VERSION=2.0"
+  allow_failures:
+    - python: "3.7"
+    env: "DJANGO_VERSION=1.11"
 
 install:
   - "pip install mock"
