--- a/.travis.yml
+++ b/.travis.yml
@@ -10,12 +10,19 @@ matrix:
       env: "DJANGO_VERSION=1.11"
     - python: "3.5"
       env: "DJANGO_VERSION=2.0"
+    - python: "3.5"
+      env: "DJANGO_VERSION=2.1"
     - python: "3.6"
       env: "DJANGO_VERSION=1.11"
     - python: "3.6"
       env: "DJANGO_VERSION=2.0"
+    - python: "3.6
+      env: "DJANGO_VERSION=2.1"
     - python: "3.7"
       env: "DJANGO_VERSION=2.0"
+    - python: "3.7"
+      env: "DJANGO_VERSION=2.1"
+
 
 install:
   - "pip install mock"
