--- a/javascript/package.json
+++ b/javascript/package.json
@@ -2,7 +2,12 @@
   "name": "django-task-api",
   "version": "1.0.0",
   "description": "Client library for the Django Task API",
-  "main": "src/index.js",
+  "main": "dist/django-task-api.min.js",
+  "module": "src/index.js",
+  "files": [
+    "dist",
+    "src"
+  ],
   "scripts": {
     "build": "webpack --config webpack.config.babel.js && cp dist/django-task-api.js ../task_api/static/"
   },
