--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -5,7 +5,7 @@ name: Django Task API Tests
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
   pull_request:
 
 jobs:
@@ -25,13 +25,19 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
+    - name: Install poetry
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install poetry
+        poetry env use system
+
     - name: Install celery
       run: |
-        pip install "celery==${{ celery-version }}"
+        poetry run pip install "celery==${{ celery-version }}"
 
     - name: Install Django
       run: |
-        - pip install "django==${{ django-verrsion }}"
+        poetry run pip install "django==${{ django-verrsion }}"
 
     - name: Install dependencies
       run: |
@@ -40,5 +46,5 @@ jobs:
 
     - name: Run tests
       run: |
-        echo "Using celery version " `celery --version`
-        pytest
+        echo "Using celery version " `poetry run celery --version`
+        poetry run pytest
