--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -17,6 +17,10 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.9
+    - name: Set up Node
+    - uses: actions/setup-node@v2
+      with:
+        node-version: '14'
 
     - name: Install dependencies
       run: |
@@ -25,8 +29,20 @@ jobs:
         poetry env use system
         poetry install
 
-    - name: Build and publish
+    - name: Build JavaScript library
+      run: |
+        cd javascript
+        npm install
+        npm run-script build
+
+    - name: Build and publish Python module
       env:
         POETRY_PYPI_TOKEN_PYPI: ${{ secrets.PYPI_TOKEN }}
       run:
         poetry publish --build
+
+    - name: Publish Node module
+      run: |
+        npm publish
+      env:
+        NODE_AUTH_TOKEN: ${{secrets.npm_token}}
