--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -17,8 +17,9 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.9
+
     - name: Set up Node
-    - uses: actions/setup-node@v2
+      uses: actions/setup-node@v2
       with:
         node-version: '14'
 
@@ -38,7 +39,7 @@ jobs:
     - name: Build and publish Python module
       env:
         POETRY_PYPI_TOKEN_PYPI: ${{ secrets.PYPI_TOKEN }}
-      run:
+      run: |
         poetry publish --build
 
     - name: Publish Node module
