Fix publish workflow

--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -44,6 +44,7 @@ jobs:
 
     - name: Publish Node module
       run: |
+        cd javascript
         npm publish
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
